--- a/public/css/app.css
+++ b/public/css/app.css
@@ -729,6 +729,9 @@ body {
     max-width: 1536px;
   }
 }
+.pointer-events-none{
+  pointer-events: none;
+}
 .fixed{
   position: fixed;
 }
@@ -741,6 +744,10 @@ body {
 .sticky{
   position: -webkit-sticky;
   position: sticky;
+}
+.inset-y-0{
+  top: 0px;
+  bottom: 0px;
 }
 .top-14{
   top: 3.5rem;
@@ -793,11 +800,29 @@ body {
 .right-4{
   right: 1rem;
 }
+.right-2{
+  right: 0.5rem;
+}
+.top-2{
+  top: 0.5rem;
+}
+.left-3{
+  left: 0.75rem;
+}
 .z-10{
   z-index: 10;
 }
+.z-40{
+  z-index: 40;
+}
+.z-30{
+  z-index: 30;
+}
 .z-\[3\]{
   z-index: 3;
+}
+.z-20{
+  z-index: 20;
 }
 .z-\[2\]{
   z-index: 2;
@@ -841,9 +866,9 @@ body {
   margin-left: 1rem;
   margin-right: 1rem;
 }
-.my-2{
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
+.my-3{
+  margin-top: 0.75rem;
+  margin-bottom: 0.75rem;
 }
 .mt-8{
   margin-top: 2rem;
@@ -866,6 +891,15 @@ body {
 .mt-5{
   margin-top: 1.25rem;
 }
+.mb-3{
+  margin-bottom: 0.75rem;
+}
+.mt-7{
+  margin-top: 1.75rem;
+}
+.mr-auto{
+  margin-right: auto;
+}
 .ml-3{
   margin-left: 0.75rem;
 }
@@ -878,26 +912,35 @@ body {
 .mb-2{
   margin-bottom: 0.5rem;
 }
-.mr-auto{
-  margin-right: auto;
-}
 .ml-5{
   margin-left: 1.25rem;
 }
 .mt-2{
   margin-top: 0.5rem;
 }
+.ml-2{
+  margin-left: 0.5rem;
+}
 .-mr-14{
   margin-right: -3.5rem;
 }
-.mb-3{
-  margin-bottom: 0.75rem;
+.mt-auto{
+  margin-top: auto;
+}
+.mt-1{
+  margin-top: 0.25rem;
 }
 .block{
   display: block;
 }
+.inline-block{
+  display: inline-block;
+}
 .flex{
   display: flex;
+}
+.inline-flex{
+  display: inline-flex;
 }
 .table{
   display: table;
@@ -935,6 +978,9 @@ body {
 .h-9{
   height: 2.25rem;
 }
+.h-screen{
+  height: 100vh;
+}
 .h-96{
   height: 24rem;
 }
@@ -959,8 +1005,23 @@ body {
 .h-5{
   height: 1.25rem;
 }
+.h-6{
+  height: 1.5rem;
+}
+.h-40{
+  height: 10rem;
+}
 .max-h-\[calc\(100vh_-_theme\(space\.16\)\)\]{
   max-height: calc(100vh - 4rem);
+}
+.max-h-40{
+  max-height: 10rem;
+}
+.max-h-56{
+  max-height: 14rem;
+}
+.max-h-96{
+  max-height: 24rem;
 }
 .min-h-screen{
   min-height: 100vh;
@@ -1016,11 +1077,26 @@ body {
 .w-52{
   width: 13rem;
 }
+.w-20{
+  width: 5rem;
+}
 .w-5{
   width: 1.25rem;
 }
+.w-24{
+  width: 6rem;
+}
+.w-40{
+  width: 10rem;
+}
+.w-12{
+  width: 3rem;
+}
 .min-w-full{
   min-width: 100%;
+}
+.min-w-\[1000px\]{
+  min-width: 1000px;
 }
 .max-w-full{
   max-width: 100%;
@@ -1086,11 +1162,29 @@ body {
   -webkit-animation: spin 1s linear infinite;
           animation: spin 1s linear infinite;
 }
-.cursor-pointer{
-  cursor: pointer;
+@-webkit-keyframes pulse{
+
+
+  50%{
+    opacity: .5;
+  }
+}
+@keyframes pulse{
+
+
+  50%{
+    opacity: .5;
+  }
+}
+.animate-pulse{
+  -webkit-animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+          animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
 }
 .cursor-not-allowed{
   cursor: not-allowed;
+}
+.cursor-pointer{
+  cursor: pointer;
 }
 .select-none{
   -webkit-user-select: none;
@@ -1112,6 +1206,9 @@ body {
 }
 .flex-col{
   flex-direction: column;
+}
+.flex-wrap{
+  flex-wrap: wrap;
 }
 .items-start{
   align-items: flex-start;
@@ -1146,14 +1243,20 @@ body {
 .gap-6{
   gap: 1.5rem;
 }
+.gap-5{
+  gap: 1.25rem;
+}
 .gap-3{
   gap: 0.75rem;
 }
 .gap-8{
   gap: 2rem;
 }
-.gap-5{
-  gap: 1.25rem;
+.gap-1{
+  gap: 0.25rem;
+}
+.gap-7{
+  gap: 1.75rem;
 }
 .divide-y > :not([hidden]) ~ :not([hidden]){
   --tw-divide-y-reverse: 0;
@@ -1168,6 +1271,10 @@ body {
   --tw-divide-opacity: 1;
   border-color: rgb(243 244 246 / var(--tw-divide-opacity));
 }
+.divide-gray-200 > :not([hidden]) ~ :not([hidden]){
+  --tw-divide-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-divide-opacity));
+}
 .overflow-auto{
   overflow: auto;
 }
@@ -1177,14 +1284,16 @@ body {
 .overflow-x-auto{
   overflow-x: auto;
 }
+.truncate{
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
 .whitespace-normal{
   white-space: normal;
 }
 .whitespace-nowrap{
   white-space: nowrap;
-}
-.break-words{
-  overflow-wrap: break-word;
 }
 .rounded-2xl{
   border-radius: 1rem;
@@ -1204,11 +1313,30 @@ body {
 .rounded-md{
   border-radius: 0.375rem;
 }
+.rounded-t-lg{
+  border-top-left-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
+}
+.rounded-b-none{
+  border-bottom-right-radius: 0px;
+  border-bottom-left-radius: 0px;
+}
+.rounded-t-none{
+  border-top-left-radius: 0px;
+  border-top-right-radius: 0px;
+}
+.rounded-b-lg{
+  border-bottom-right-radius: 0.5rem;
+  border-bottom-left-radius: 0.5rem;
+}
 .border{
   border-width: 1px;
 }
 .border-2{
   border-width: 2px;
+}
+.border-0{
+  border-width: 0px;
 }
 .border-y{
   border-top-width: 1px;
@@ -1237,6 +1365,9 @@ body {
 }
 .border-solid{
   border-style: solid;
+}
+.border-dashed{
+  border-style: dashed;
 }
 .border-zinc-300{
   --tw-border-opacity: 1;
@@ -1293,6 +1424,9 @@ body {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
+.bg-black\/70{
+  background-color: rgb(0 0 0 / 0.7);
+}
 .bg-gray-500{
   --tw-bg-opacity: 1;
   background-color: rgb(107 114 128 / var(--tw-bg-opacity));
@@ -1340,6 +1474,26 @@ body {
 .bg-gray-900\/50{
   background-color: rgb(17 24 39 / 0.5);
 }
+.bg-slate-100{
+  --tw-bg-opacity: 1;
+  background-color: rgb(241 245 249 / var(--tw-bg-opacity));
+}
+.bg-yellow-100{
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 249 195 / var(--tw-bg-opacity));
+}
+.bg-sky-100{
+  --tw-bg-opacity: 1;
+  background-color: rgb(224 242 254 / var(--tw-bg-opacity));
+}
+.bg-sky-50{
+  --tw-bg-opacity: 1;
+  background-color: rgb(240 249 255 / var(--tw-bg-opacity));
+}
+.bg-slate-200{
+  --tw-bg-opacity: 1;
+  background-color: rgb(226 232 240 / var(--tw-bg-opacity));
+}
 .object-contain{
   -o-object-fit: contain;
      object-fit: contain;
@@ -1354,14 +1508,20 @@ body {
 .p-3{
   padding: 0.75rem;
 }
-.p-7{
-  padding: 1.75rem;
-}
 .p-5{
   padding: 1.25rem;
 }
+.p-7{
+  padding: 1.75rem;
+}
 .p-0{
   padding: 0px;
+}
+.p-1{
+  padding: 0.25rem;
+}
+.p-2{
+  padding: 0.5rem;
 }
 .py-4{
   padding-top: 1rem;
@@ -1379,13 +1539,9 @@ body {
   padding-top: 4rem;
   padding-bottom: 4rem;
 }
-.px-4{
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-.py-2{
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+.py-3{
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 }
 .py-8{
   padding-top: 2rem;
@@ -1403,10 +1559,6 @@ body {
   padding-top: 0px;
   padding-bottom: 0px;
 }
-.py-3{
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-}
 .px-10{
   padding-left: 2.5rem;
   padding-right: 2.5rem;
@@ -1414,6 +1566,18 @@ body {
 .py-10{
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
+}
+.py-2{
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+.px-4{
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+.py-7{
+  padding-top: 1.75rem;
+  padding-bottom: 1.75rem;
 }
 .py-24{
   padding-top: 6rem;
@@ -1434,6 +1598,10 @@ body {
 .px-2{
   padding-left: 0.5rem;
   padding-right: 0.5rem;
+}
+.py-2\.5{
+  padding-top: 0.625rem;
+  padding-bottom: 0.625rem;
 }
 .pb-3{
   padding-bottom: 0.75rem;
@@ -1498,8 +1666,17 @@ body {
 .pr-5{
   padding-right: 1.25rem;
 }
-.pl-2{
-  padding-left: 0.5rem;
+.pr-9{
+  padding-right: 2.25rem;
+}
+.pr-2{
+  padding-right: 0.5rem;
+}
+.pr-4{
+  padding-right: 1rem;
+}
+.pl-11{
+  padding-left: 2.75rem;
 }
 .text-left{
   text-align: left;
@@ -1512,6 +1689,9 @@ body {
 }
 .font-logo{
   font-family: Mochiy Pop P One, sans-serif;
+}
+.font-mono{
+  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 .text-sm{
   font-size: 0.875rem;
@@ -1563,6 +1743,12 @@ body {
 }
 .font-thin{
   font-weight: 100;
+}
+.uppercase{
+  text-transform: uppercase;
+}
+.tracking-wider{
+  letter-spacing: 0.05em;
 }
 .text-white{
   --tw-text-opacity: 1;
@@ -1644,13 +1830,37 @@ body {
   --tw-text-opacity: 1 !important;
   color: rgb(255 255 255 / var(--tw-text-opacity)) !important;
 }
+.text-red-500{
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
+}
+.text-green-500{
+  --tw-text-opacity: 1;
+  color: rgb(34 197 94 / var(--tw-text-opacity));
+}
 .text-sky-500{
   --tw-text-opacity: 1;
   color: rgb(14 165 233 / var(--tw-text-opacity));
 }
-.text-red-500{
+.text-yellow-800{
   --tw-text-opacity: 1;
-  color: rgb(239 68 68 / var(--tw-text-opacity));
+  color: rgb(133 77 14 / var(--tw-text-opacity));
+}
+.text-sky-700{
+  --tw-text-opacity: 1;
+  color: rgb(3 105 161 / var(--tw-text-opacity));
+}
+.text-green-700{
+  --tw-text-opacity: 1;
+  color: rgb(21 128 61 / var(--tw-text-opacity));
+}
+.text-gray-300{
+  --tw-text-opacity: 1;
+  color: rgb(209 213 219 / var(--tw-text-opacity));
+}
+.text-gray-400{
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 .underline{
   -webkit-text-decoration-line: underline;
@@ -1668,6 +1878,9 @@ body {
   --tw-placeholder-opacity: 1;
   color: rgb(161 161 170 / var(--tw-placeholder-opacity));
 }
+.opacity-50{
+  opacity: 0.5;
+}
 .opacity-0{
   opacity: 0;
 }
@@ -1679,9 +1892,6 @@ body {
 }
 .opacity-75{
   opacity: 0.75;
-}
-.opacity-50{
-  opacity: 0.5;
 }
 .shadow-lg{
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
@@ -1701,12 +1911,6 @@ body {
 .outline{
   outline-style: solid;
 }
-.outline-0{
-  outline-width: 0px;
-}
-.outline-1{
-  outline-width: 1px;
-}
 .outline-2{
   outline-width: 2px;
 }
@@ -1716,17 +1920,8 @@ body {
 .outline-blue-600{
   outline-color: #2563eb;
 }
-.outline-black{
-  outline-color: #000;
-}
-.outline-zinc-300{
-  outline-color: #d4d4d8;
-}
 .outline-zinc-400{
   outline-color: #a1a1aa;
-}
-.outline-zinc-200{
-  outline-color: #e4e4e7;
 }
 .ring-2{
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
@@ -1751,6 +1946,9 @@ body {
 }
 .ring-offset-2{
   --tw-ring-offset-width: 2px;
+}
+.filter{
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 .transition{
   transition-property: color, background-color, border-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
@@ -1801,10 +1999,102 @@ body {
     display: block !important;
 }
 
+.file\:mr-4::-webkit-file-upload-button{
+  margin-right: 1rem;
+}
+
+.file\:mr-4::file-selector-button{
+  margin-right: 1rem;
+}
+
+.file\:rounded-full::-webkit-file-upload-button{
+  border-radius: 9999px;
+}
+
+.file\:rounded-full::file-selector-button{
+  border-radius: 9999px;
+}
+
+.file\:border-0::-webkit-file-upload-button{
+  border-width: 0px;
+}
+
+.file\:border-0::file-selector-button{
+  border-width: 0px;
+}
+
+.file\:bg-violet-50::-webkit-file-upload-button{
+  --tw-bg-opacity: 1;
+  background-color: rgb(245 243 255 / var(--tw-bg-opacity));
+}
+
+.file\:bg-violet-50::file-selector-button{
+  --tw-bg-opacity: 1;
+  background-color: rgb(245 243 255 / var(--tw-bg-opacity));
+}
+
+.file\:py-2::-webkit-file-upload-button{
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.file\:py-2::file-selector-button{
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.file\:px-4::-webkit-file-upload-button{
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.file\:px-4::file-selector-button{
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.file\:text-sm::-webkit-file-upload-button{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.file\:text-sm::file-selector-button{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.file\:font-semibold::-webkit-file-upload-button{
+  font-weight: 600;
+}
+
+.file\:font-semibold::file-selector-button{
+  font-weight: 600;
+}
+
+.file\:text-sky-600::-webkit-file-upload-button{
+  --tw-text-opacity: 1;
+  color: rgb(2 132 199 / var(--tw-text-opacity));
+}
+
+.file\:text-sky-600::file-selector-button{
+  --tw-text-opacity: 1;
+  color: rgb(2 132 199 / var(--tw-text-opacity));
+}
+
 .after\:px-4::after{
   content: var(--tw-content);
   padding-left: 1rem;
   padding-right: 1rem;
+}
+
+.hover\:bg-gray-50:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-slate-300:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(203 213 225 / var(--tw-bg-opacity));
 }
 
 .hover\:text-blue-600:hover{
@@ -1822,8 +2112,33 @@ body {
   color: rgb(2 132 199 / var(--tw-text-opacity));
 }
 
+.hover\:text-gray-500:hover{
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+
+.hover\:text-gray-600:hover{
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity));
+}
+
+.hover\:file\:bg-sky-100::-webkit-file-upload-button:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(224 242 254 / var(--tw-bg-opacity));
+}
+
+.hover\:file\:bg-sky-100::file-selector-button:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(224 242 254 / var(--tw-bg-opacity));
+}
+
 .focus\:border-transparent:focus{
   border-color: transparent;
+}
+
+.focus\:border-sky-500:focus{
+  --tw-border-opacity: 1;
+  border-color: rgb(14 165 233 / var(--tw-border-opacity));
 }
 
 .focus\:bg-black:focus{
@@ -1842,6 +2157,17 @@ body {
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
+.focus\:ring-1:focus{
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.focus\:ring-sky-500:focus{
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(14 165 233 / var(--tw-ring-opacity));
+}
+
 .group:hover .group-hover\:scale-100{
   --tw-scale-x: 1;
   --tw-scale-y: 1;
@@ -1853,6 +2179,16 @@ body {
 }
 
 @media (min-width: 640px){
+
+
+  .sm\:block{
+    display: block;
+  }
+
+
+  .sm\:inline-block{
+    display: inline-block;
+  }
 
 
   .sm\:flex{
@@ -1871,6 +2207,11 @@ body {
 }
 
 @media (min-width: 768px){
+
+
+  .md\:inline-block{
+    display: inline-block;
+  }
 
 
   .md\:grid-cols-3{
@@ -1964,6 +2305,11 @@ body {
 
   .lg\:w-64{
     width: 16rem;
+  }
+
+
+  .lg\:w-80{
+    width: 20rem;
   }
 
 
