--- a/public/css/admin/app.css
+++ b/public/css/admin/app.css
@@ -990,24 +990,24 @@ img {
   margin-top: 1rem;
 }
 
-.mb-4{
-  margin-bottom: 1rem;
-}
-
-.mt-auto{
-  margin-top: auto;
+.mt-8{
+  margin-top: 2rem;
 }
 
 .mt-10{
   margin-top: 2.5rem;
 }
 
-.mt-8{
-  margin-top: 2rem;
+.mb-4{
+  margin-bottom: 1rem;
 }
 
 .mt-5{
   margin-top: 1.25rem;
+}
+
+.mt-auto{
+  margin-top: auto;
 }
 
 .mb-3{
@@ -1110,16 +1110,16 @@ img {
   height: 3.5rem;
 }
 
-.h-12{
-  height: 3rem;
-}
-
 .h-3\/4{
   height: 75%;
 }
 
 .h-9{
   height: 2.25rem;
+}
+
+.h-64{
+  height: 16rem;
 }
 
 .h-96{
@@ -1154,10 +1154,6 @@ img {
   height: 1.5rem;
 }
 
-.h-64{
-  height: 16rem;
-}
-
 .max-h-\[calc\(100vh_-_theme\(space\.16\)\)\]{
   max-height: calc(100vh - 4rem);
 }
@@ -1182,6 +1178,10 @@ img {
   min-height: calc(100vh - 4rem);
 }
 
+.min-h-full{
+  min-height: 100%;
+}
+
 .w-28{
   width: 7rem;
 }
@@ -1198,10 +1198,6 @@ img {
   width: 4rem;
 }
 
-.w-72{
-  width: 18rem;
-}
-
 .w-14{
   width: 3.5rem;
 }
@@ -1212,6 +1208,10 @@ img {
 
 .w-1\/3{
   width: 33.333333%;
+}
+
+.w-72{
+  width: 18rem;
 }
 
 .w-3\/5{
@@ -1414,6 +1414,10 @@ img {
   align-items: center;
 }
 
+.items-stretch{
+  align-items: stretch;
+}
+
 .justify-end{
   justify-content: flex-end;
 }
@@ -1442,12 +1446,12 @@ img {
   gap: 5rem;
 }
 
-.gap-6{
-  gap: 1.5rem;
-}
-
 .gap-12{
   gap: 3rem;
+}
+
+.gap-6{
+  gap: 1.5rem;
 }
 
 .gap-5{
@@ -1489,6 +1493,10 @@ img {
 .divide-gray-200 > :not([hidden]) ~ :not([hidden]){
   --tw-divide-opacity: 1;
   border-color: rgb(229 231 235 / var(--tw-divide-opacity));
+}
+
+.self-stretch{
+  align-self: stretch;
 }
 
 .overflow-auto{
@@ -1674,14 +1682,14 @@ img {
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
 
-.bg-sky-500{
-  --tw-bg-opacity: 1;
-  background-color: rgb(14 165 233 / var(--tw-bg-opacity));
-}
-
 .bg-blue-600{
   --tw-bg-opacity: 1;
   background-color: rgb(37 99 235 / var(--tw-bg-opacity));
+}
+
+.bg-sky-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(14 165 233 / var(--tw-bg-opacity));
 }
 
 .bg-zinc-900{
@@ -1825,29 +1833,9 @@ img {
   padding-bottom: 0.5rem;
 }
 
-.py-24{
-  padding-top: 6rem;
-  padding-bottom: 6rem;
-}
-
-.px-4{
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-
 .py-1{
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
-}
-
-.px-6{
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-}
-
-.py-6{
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
 }
 
 .py-16{
@@ -1868,6 +1856,26 @@ img {
 .py-0{
   padding-top: 0px;
   padding-bottom: 0px;
+}
+
+.px-4{
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.py-24{
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+}
+
+.px-6{
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
+.py-6{
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 
 .py-7{
@@ -1910,22 +1918,6 @@ img {
   padding-bottom: 0.5rem;
 }
 
-.pt-28{
-  padding-top: 7rem;
-}
-
-.pt-24{
-  padding-top: 6rem;
-}
-
-.pt-6{
-  padding-top: 1.5rem;
-}
-
-.pt-14{
-  padding-top: 3.5rem;
-}
-
 .pt-2{
   padding-top: 0.5rem;
 }
@@ -1948,6 +1940,22 @@ img {
 
 .pb-6{
   padding-bottom: 1.5rem;
+}
+
+.pt-28{
+  padding-top: 7rem;
+}
+
+.pt-24{
+  padding-top: 6rem;
+}
+
+.pt-6{
+  padding-top: 1.5rem;
+}
+
+.pt-14{
+  padding-top: 3.5rem;
 }
 
 .pt-1{
@@ -2031,9 +2039,9 @@ img {
   line-height: 2.25rem;
 }
 
-.text-5xl{
-  font-size: 3rem;
-  line-height: 1;
+.text-xs{
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 
 .text-xl{
@@ -2041,30 +2049,30 @@ img {
   line-height: 1.75rem;
 }
 
-.text-xs{
-  font-size: 0.75rem;
-  line-height: 1rem;
-}
-
 .text-base{
   font-size: 1rem;
   line-height: 1.5rem;
+}
+
+.text-5xl{
+  font-size: 3rem;
+  line-height: 1;
 }
 
 .font-medium{
   font-weight: 500;
 }
 
-.font-normal{
-  font-weight: 400;
+.font-semibold{
+  font-weight: 600;
 }
 
 .font-light{
   font-weight: 300;
 }
 
-.font-semibold{
-  font-weight: 600;
+.font-normal{
+  font-weight: 400;
 }
 
 .font-thin{
@@ -2099,6 +2107,41 @@ img {
   color: rgb(63 63 70 / var(--tw-text-opacity));
 }
 
+.text-zinc-600{
+  --tw-text-opacity: 1;
+  color: rgb(82 82 91 / var(--tw-text-opacity));
+}
+
+.text-blue-600{
+  --tw-text-opacity: 1;
+  color: rgb(37 99 235 / var(--tw-text-opacity));
+}
+
+.text-gray-700{
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
+}
+
+.text-orange-500{
+  --tw-text-opacity: 1;
+  color: rgb(249 115 22 / var(--tw-text-opacity));
+}
+
+.text-gray-600{
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity));
+}
+
+.text-gray-900{
+  --tw-text-opacity: 1;
+  color: rgb(17 24 39 / var(--tw-text-opacity));
+}
+
+.text-red-500{
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
+}
+
 .text-zinc-900{
   --tw-text-opacity: 1;
   color: rgb(24 24 27 / var(--tw-text-opacity));
@@ -2119,34 +2162,24 @@ img {
   color: rgb(2 132 199 / var(--tw-text-opacity));
 }
 
-.text-orange-500{
+.text-rose-600{
   --tw-text-opacity: 1;
-  color: rgb(249 115 22 / var(--tw-text-opacity));
+  color: rgb(225 29 72 / var(--tw-text-opacity));
 }
 
-.text-zinc-600{
+.text-amber-500{
   --tw-text-opacity: 1;
-  color: rgb(82 82 91 / var(--tw-text-opacity));
+  color: rgb(245 158 11 / var(--tw-text-opacity));
 }
 
-.text-blue-600{
+.text-purple-600{
   --tw-text-opacity: 1;
-  color: rgb(37 99 235 / var(--tw-text-opacity));
+  color: rgb(147 51 234 / var(--tw-text-opacity));
 }
 
-.text-gray-700{
+.text-green-600{
   --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity));
-}
-
-.text-gray-600{
-  --tw-text-opacity: 1;
-  color: rgb(75 85 99 / var(--tw-text-opacity));
-}
-
-.text-gray-900{
-  --tw-text-opacity: 1;
-  color: rgb(17 24 39 / var(--tw-text-opacity));
+  color: rgb(22 163 74 / var(--tw-text-opacity));
 }
 
 .text-slate-50{
@@ -2177,11 +2210,6 @@ img {
 .\!text-white{
   --tw-text-opacity: 1 !important;
   color: rgb(255 255 255 / var(--tw-text-opacity)) !important;
-}
-
-.text-red-500{
-  --tw-text-opacity: 1;
-  color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
 .text-gray-400{
@@ -2217,31 +2245,6 @@ img {
 .text-green-700{
   --tw-text-opacity: 1;
   color: rgb(21 128 61 / var(--tw-text-opacity));
-}
-
-.text-red-900{
-  --tw-text-opacity: 1;
-  color: rgb(127 29 29 / var(--tw-text-opacity));
-}
-
-.text-rose-600{
-  --tw-text-opacity: 1;
-  color: rgb(225 29 72 / var(--tw-text-opacity));
-}
-
-.text-amber-500{
-  --tw-text-opacity: 1;
-  color: rgb(245 158 11 / var(--tw-text-opacity));
-}
-
-.text-purple-600{
-  --tw-text-opacity: 1;
-  color: rgb(147 51 234 / var(--tw-text-opacity));
-}
-
-.text-green-600{
-  --tw-text-opacity: 1;
-  color: rgb(22 163 74 / var(--tw-text-opacity));
 }
 
 .underline{
@@ -2713,12 +2716,12 @@ img {
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
-  .lg\:grid-cols-3{
-    grid-template-columns: repeat(3, minmax(0, 1fr));
-  }
-
   .lg\:grid-cols-2{
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-3{
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .lg\:grid-cols-4{
