--- a/public/css/app.css
+++ b/public/css/app.css
@@ -498,11 +498,11 @@ body {
 .mb-12{ margin-bottom: 3rem; }
 .ml-auto{ margin-left: auto; }
 .mt-4{ margin-top: 1rem; }
-.mb-4{ margin-bottom: 1rem; }
-.mt-auto{ margin-top: auto; }
-.mt-10{ margin-top: 2.5rem; }
 .mt-8{ margin-top: 2rem; }
+.mt-10{ margin-top: 2.5rem; }
+.mb-4{ margin-bottom: 1rem; }
 .mt-5{ margin-top: 1.25rem; }
+.mt-auto{ margin-top: auto; }
 .mb-3{ margin-bottom: 0.75rem; }
 .mt-7{ margin-top: 1.75rem; }
 .mr-auto{ margin-right: auto; }
@@ -528,9 +528,9 @@ body {
 .h-full{ height: 100%; }
 .h-10{ height: 2.5rem; }
 .h-14{ height: 3.5rem; }
-.h-12{ height: 3rem; }
 .h-3\/4{ height: 75%; }
 .h-9{ height: 2.25rem; }
+.h-64{ height: 16rem; }
 .h-96{ height: 24rem; }
 .h-screen{ height: 100vh; }
 .h-7{ height: 1.75rem; }
@@ -539,21 +539,21 @@ body {
 .h-5{ height: 1.25rem; }
 .h-40{ height: 10rem; }
 .h-6{ height: 1.5rem; }
-.h-64{ height: 16rem; }
 .max-h-\[calc\(100vh_-_theme\(space\.16\)\)\]{ max-height: calc(100vh - 4rem); }
 .max-h-96{ max-height: 24rem; }
 .max-h-56{ max-height: 14rem; }
 .max-h-40{ max-height: 10rem; }
 .min-h-screen{ min-height: 100vh; }
 .min-h-\[calc\(100vh_-_theme\(space\.16\)\)\]{ min-height: calc(100vh - 4rem); }
+.min-h-full{ min-height: 100%; }
 .w-28{ width: 7rem; }
 .w-full{ width: 100%; }
 .w-64{ width: 16rem; }
 .w-16{ width: 4rem; }
-.w-72{ width: 18rem; }
 .w-14{ width: 3.5rem; }
 .w-3\/4{ width: 75%; }
 .w-1\/3{ width: 33.333333%; }
+.w-72{ width: 18rem; }
 .w-3\/5{ width: 60%; }
 .w-96{ width: 24rem; }
 .w-1\/2{ width: 50%; }
@@ -606,6 +606,7 @@ body {
 .flex-wrap{ flex-wrap: wrap; }
 .items-start{ align-items: flex-start; }
 .items-center{ align-items: center; }
+.items-stretch{ align-items: stretch; }
 .justify-end{ justify-content: flex-end; }
 .justify-center{ justify-content: center; }
 .justify-between{ justify-content: space-between; }
@@ -613,8 +614,8 @@ body {
 .gap-4{ gap: 1rem; }
 .gap-2{ gap: 0.5rem; }
 .gap-20{ gap: 5rem; }
-.gap-6{ gap: 1.5rem; }
 .gap-12{ gap: 3rem; }
+.gap-6{ gap: 1.5rem; }
 .gap-5{ gap: 1.25rem; }
 .gap-3{ gap: 0.75rem; }
 .gap-8{ gap: 2rem; }
@@ -624,6 +625,7 @@ body {
 .divide-zinc-700 > :not([hidden]) ~ :not([hidden]){ --tw-divide-opacity: 1; border-color: rgb(63 63 70 / var(--tw-divide-opacity)); }
 .divide-gray-100 > :not([hidden]) ~ :not([hidden]){ --tw-divide-opacity: 1; border-color: rgb(243 244 246 / var(--tw-divide-opacity)); }
 .divide-gray-200 > :not([hidden]) ~ :not([hidden]){ --tw-divide-opacity: 1; border-color: rgb(229 231 235 / var(--tw-divide-opacity)); }
+.self-stretch{ align-self: stretch; }
 .overflow-auto{ overflow: auto; }
 .overflow-hidden{ overflow: hidden; }
 .overflow-x-auto{ overflow-x: auto; }
@@ -665,8 +667,8 @@ body {
 .bg-gray-50{ --tw-bg-opacity: 1; background-color: rgb(249 250 251 / var(--tw-bg-opacity)); }
 .bg-blue-500{ --tw-bg-opacity: 1; background-color: rgb(59 130 246 / var(--tw-bg-opacity)); }
 .bg-gray-100{ --tw-bg-opacity: 1; background-color: rgb(243 244 246 / var(--tw-bg-opacity)); }
-.bg-sky-500{ --tw-bg-opacity: 1; background-color: rgb(14 165 233 / var(--tw-bg-opacity)); }
 .bg-blue-600{ --tw-bg-opacity: 1; background-color: rgb(37 99 235 / var(--tw-bg-opacity)); }
+.bg-sky-500{ --tw-bg-opacity: 1; background-color: rgb(14 165 233 / var(--tw-bg-opacity)); }
 .bg-zinc-900{ --tw-bg-opacity: 1; background-color: rgb(24 24 27 / var(--tw-bg-opacity)); }
 .bg-zinc-800{ --tw-bg-opacity: 1; background-color: rgb(39 39 42 / var(--tw-bg-opacity)); }
 .bg-black\/70{ background-color: rgb(0 0 0 / 0.7); }
@@ -697,15 +699,15 @@ body {
 .px-10{ padding-left: 2.5rem; padding-right: 2.5rem; }
 .py-10{ padding-top: 2.5rem; padding-bottom: 2.5rem; }
 .py-2{ padding-top: 0.5rem; padding-bottom: 0.5rem; }
-.py-24{ padding-top: 6rem; padding-bottom: 6rem; }
-.px-4{ padding-left: 1rem; padding-right: 1rem; }
 .py-1{ padding-top: 0.25rem; padding-bottom: 0.25rem; }
-.px-6{ padding-left: 1.5rem; padding-right: 1.5rem; }
-.py-6{ padding-top: 1.5rem; padding-bottom: 1.5rem; }
 .py-16{ padding-top: 4rem; padding-bottom: 4rem; }
 .px-1{ padding-left: 0.25rem; padding-right: 0.25rem; }
 .py-0\.5{ padding-top: 0.125rem; padding-bottom: 0.125rem; }
 .py-0{ padding-top: 0px; padding-bottom: 0px; }
+.px-4{ padding-left: 1rem; padding-right: 1rem; }
+.py-24{ padding-top: 6rem; padding-bottom: 6rem; }
+.px-6{ padding-left: 1.5rem; padding-right: 1.5rem; }
+.py-6{ padding-top: 1.5rem; padding-bottom: 1.5rem; }
 .py-7{ padding-top: 1.75rem; padding-bottom: 1.75rem; }
 .px-5{ padding-left: 1.25rem; padding-right: 1.25rem; }
 .px-2{ padding-left: 0.5rem; padding-right: 0.5rem; }
@@ -715,16 +717,16 @@ body {
 .pb-3{ padding-bottom: 0.75rem; }
 .pt-3{ padding-top: 0.75rem; }
 .pb-2{ padding-bottom: 0.5rem; }
-.pt-28{ padding-top: 7rem; }
-.pt-24{ padding-top: 6rem; }
-.pt-6{ padding-top: 1.5rem; }
-.pt-14{ padding-top: 3.5rem; }
 .pt-2{ padding-top: 0.5rem; }
 .pl-4{ padding-left: 1rem; }
 .pt-10{ padding-top: 2.5rem; }
 .pb-8{ padding-bottom: 2rem; }
 .pt-8{ padding-top: 2rem; }
 .pb-6{ padding-bottom: 1.5rem; }
+.pt-28{ padding-top: 7rem; }
+.pt-24{ padding-top: 6rem; }
+.pt-6{ padding-top: 1.5rem; }
+.pt-14{ padding-top: 3.5rem; }
 .pt-1{ padding-top: 0.25rem; }
 .pl-3{ padding-left: 0.75rem; }
 .pr-52{ padding-right: 13rem; }
@@ -744,14 +746,14 @@ body {
 .text-4xl{ font-size: 2.25rem; line-height: 2.5rem; }
 .text-sm{ font-size: 0.875rem; line-height: 1.25rem; }
 .text-3xl{ font-size: 1.875rem; line-height: 2.25rem; }
-.text-5xl{ font-size: 3rem; line-height: 1; }
-.text-xl{ font-size: 1.25rem; line-height: 1.75rem; }
 .text-xs{ font-size: 0.75rem; line-height: 1rem; }
+.text-xl{ font-size: 1.25rem; line-height: 1.75rem; }
 .text-base{ font-size: 1rem; line-height: 1.5rem; }
+.text-5xl{ font-size: 3rem; line-height: 1; }
 .font-medium{ font-weight: 500; }
-.font-normal{ font-weight: 400; }
-.font-light{ font-weight: 300; }
 .font-semibold{ font-weight: 600; }
+.font-light{ font-weight: 300; }
+.font-normal{ font-weight: 400; }
 .font-thin{ font-weight: 100; }
 .uppercase{ text-transform: uppercase; }
 .tracking-wider{ letter-spacing: 0.05em; }
@@ -759,23 +761,27 @@ body {
 .text-white{ --tw-text-opacity: 1; color: rgb(255 255 255 / var(--tw-text-opacity)); }
 .text-zinc-400{ --tw-text-opacity: 1; color: rgb(161 161 170 / var(--tw-text-opacity)); }
 .text-zinc-700{ --tw-text-opacity: 1; color: rgb(63 63 70 / var(--tw-text-opacity)); }
+.text-zinc-600{ --tw-text-opacity: 1; color: rgb(82 82 91 / var(--tw-text-opacity)); }
+.text-blue-600{ --tw-text-opacity: 1; color: rgb(37 99 235 / var(--tw-text-opacity)); }
+.text-gray-700{ --tw-text-opacity: 1; color: rgb(55 65 81 / var(--tw-text-opacity)); }
+.text-orange-500{ --tw-text-opacity: 1; color: rgb(249 115 22 / var(--tw-text-opacity)); }
+.text-gray-600{ --tw-text-opacity: 1; color: rgb(75 85 99 / var(--tw-text-opacity)); }
+.text-gray-900{ --tw-text-opacity: 1; color: rgb(17 24 39 / var(--tw-text-opacity)); }
+.text-red-500{ --tw-text-opacity: 1; color: rgb(239 68 68 / var(--tw-text-opacity)); }
 .text-zinc-900{ --tw-text-opacity: 1; color: rgb(24 24 27 / var(--tw-text-opacity)); }
 .text-zinc-500{ --tw-text-opacity: 1; color: rgb(113 113 122 / var(--tw-text-opacity)); }
 .text-slate-500{ --tw-text-opacity: 1; color: rgb(100 116 139 / var(--tw-text-opacity)); }
 .text-sky-600{ --tw-text-opacity: 1; color: rgb(2 132 199 / var(--tw-text-opacity)); }
-.text-orange-500{ --tw-text-opacity: 1; color: rgb(249 115 22 / var(--tw-text-opacity)); }
-.text-zinc-600{ --tw-text-opacity: 1; color: rgb(82 82 91 / var(--tw-text-opacity)); }
-.text-blue-600{ --tw-text-opacity: 1; color: rgb(37 99 235 / var(--tw-text-opacity)); }
-.text-gray-700{ --tw-text-opacity: 1; color: rgb(55 65 81 / var(--tw-text-opacity)); }
-.text-gray-600{ --tw-text-opacity: 1; color: rgb(75 85 99 / var(--tw-text-opacity)); }
-.text-gray-900{ --tw-text-opacity: 1; color: rgb(17 24 39 / var(--tw-text-opacity)); }
+.text-rose-600{ --tw-text-opacity: 1; color: rgb(225 29 72 / var(--tw-text-opacity)); }
+.text-amber-500{ --tw-text-opacity: 1; color: rgb(245 158 11 / var(--tw-text-opacity)); }
+.text-purple-600{ --tw-text-opacity: 1; color: rgb(147 51 234 / var(--tw-text-opacity)); }
+.text-green-600{ --tw-text-opacity: 1; color: rgb(22 163 74 / var(--tw-text-opacity)); }
 .text-slate-50{ --tw-text-opacity: 1; color: rgb(248 250 252 / var(--tw-text-opacity)); }
 .text-stone-800{ --tw-text-opacity: 1; color: rgb(41 37 36 / var(--tw-text-opacity)); }
 .text-red-800{ --tw-text-opacity: 1; color: rgb(153 27 27 / var(--tw-text-opacity)); }
 .text-green-800{ --tw-text-opacity: 1; color: rgb(22 101 52 / var(--tw-text-opacity)); }
 .text-gray-500{ --tw-text-opacity: 1; color: rgb(107 114 128 / var(--tw-text-opacity)); }
 .\!text-white{ --tw-text-opacity: 1 !important; color: rgb(255 255 255 / var(--tw-text-opacity)) !important; }
-.text-red-500{ --tw-text-opacity: 1; color: rgb(239 68 68 / var(--tw-text-opacity)); }
 .text-gray-400{ --tw-text-opacity: 1; color: rgb(156 163 175 / var(--tw-text-opacity)); }
 .text-sky-500{ --tw-text-opacity: 1; color: rgb(14 165 233 / var(--tw-text-opacity)); }
 .text-green-500{ --tw-text-opacity: 1; color: rgb(34 197 94 / var(--tw-text-opacity)); }
@@ -783,11 +789,6 @@ body {
 .text-yellow-800{ --tw-text-opacity: 1; color: rgb(133 77 14 / var(--tw-text-opacity)); }
 .text-sky-700{ --tw-text-opacity: 1; color: rgb(3 105 161 / var(--tw-text-opacity)); }
 .text-green-700{ --tw-text-opacity: 1; color: rgb(21 128 61 / var(--tw-text-opacity)); }
-.text-red-900{ --tw-text-opacity: 1; color: rgb(127 29 29 / var(--tw-text-opacity)); }
-.text-rose-600{ --tw-text-opacity: 1; color: rgb(225 29 72 / var(--tw-text-opacity)); }
-.text-amber-500{ --tw-text-opacity: 1; color: rgb(245 158 11 / var(--tw-text-opacity)); }
-.text-purple-600{ --tw-text-opacity: 1; color: rgb(147 51 234 / var(--tw-text-opacity)); }
-.text-green-600{ --tw-text-opacity: 1; color: rgb(22 163 74 / var(--tw-text-opacity)); }
 .underline{ -webkit-text-decoration-line: underline; text-decoration-line: underline; }
 .placeholder-zinc-400::-moz-placeholder{ --tw-placeholder-opacity: 1; color: rgb(161 161 170 / var(--tw-placeholder-opacity)); }
 .placeholder-zinc-400:-ms-input-placeholder{ --tw-placeholder-opacity: 1; color: rgb(161 161 170 / var(--tw-placeholder-opacity)); }
@@ -977,9 +978,9 @@ body {
 
  .lg\:scale-90{ --tw-scale-x: .9; --tw-scale-y: .9; transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y)); }
 
- .lg\:grid-cols-3{ grid-template-columns: repeat(3, minmax(0, 1fr)); }
-
  .lg\:grid-cols-2{ grid-template-columns: repeat(2, minmax(0, 1fr)); }
+
+ .lg\:grid-cols-3{ grid-template-columns: repeat(3, minmax(0, 1fr)); }
 
  .lg\:grid-cols-4{ grid-template-columns: repeat(4, minmax(0, 1fr)); }
 
